fixes background color clipping

--- a/src/styles/launchpad.css
+++ b/src/styles/launchpad.css
@@ -37,7 +37,6 @@ a {
 .fullpage {
   width: 100%;
   min-width: 100%;
-  height: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
